# simple-model-test

./: .gitignore  golden_tests.csv  main.py  pyproject.toml  resultats_comparaison_ape.csv  resultats_comparaison_ape_complet.csv  setup.sh
mlruns/0/: meta.yaml
