[project]
name = "simple-model-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fasttext>=0.9.3",
    "mlflow>=2.21.2",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pendulum>=3.0.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
    "s3fs>=2025.3.2",
    "torch>=2.6.0",
    "torchfasttext>=0.0.5",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
    "uvicorn>=0.34.0",
]
authors = [
  {name="Thomas Faria", email="thomas.faria@insee.fr"},
  {name="Meilame Tayebjee", email="meilame.tayebjee@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 100

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
